--- a/config/MarioClub_us/dol_slices.yml
+++ b/config/MarioClub_us/dol_slices.yml
@@ -931,6 +931,12 @@ src/Inagaki/GameAudioFxConfig.cpp:
     .data: [0x803940a8, 0x803942a8]
     .sdata2: [0x80418d08, 0x80418d18]
 
+src/Inagaki/GameAudioArcLoader.cpp:
+    .text: [0x801302d0, 0x801304d8]
+    .ctors: [0x803161c8, 0x803161cc]
+    .data: [0x803942a8, 0x803942e8]
+    .bss: [0x803c9750, 0x803c9778]
+
 src/Kameda/Scene.cpp:
     .text: [0x8013c1e8, 0x8013c2b8]
     .rodata: [0x8036da48, 0x8036da58]
