--- a/config/MarioClub_us/dol_slices.yml
+++ b/config/MarioClub_us/dol_slices.yml
@@ -1205,14 +1205,14 @@ src/Osako/CardMgr.cpp:
     .sbss: [0x804169c8, 0x804169d0]
     .sdata2: [0x8041b700, 0x8041b710]
 
-#src/Osako/CardAgent.cpp:
-    #.text: [0x80202a80, 0x80204fe8]
-    #.ctors: [0x8031638c, 0x80316390]
-    #.rodata: [0x8037d880, 0x8037d8c0]
-    #.data: [0x8039cb98, 0x8039cc78]
-    ##.bss: [0x80400cc0, 0x80400ce0]
-    #.sbss: [0x804169d0, 0x80416a00]
-    #.sdata2: [0x8041b710, 0x8041b748]    
+src/Osako/CardAgent.cpp:
+    .text: [0x80202a80, 0x80204fe8]
+    .ctors: [0x8031638c, 0x80316390]
+    .rodata: [0x8037d880, 0x8037d8c0]
+    .data: [0x8039cb98, 0x8039cc78]
+    #.bss: [0x80400cc0, 0x80400ce0]
+    .sbss: [0x804169d0, 0x80416a00]
+    .sdata2: [0x8041b710, 0x8041b748]    
 
 src/Osako/SequenceApp.cpp:
     .text: [0x80208aec, 0x80209424]
